examples/should_pass/linear.anvil
proc top() =
    reg r1 : logic[4]
    loop {
        set r1 := 4'd12 =>
            (if (1'b1) then set r1 := 4'd0 else set r1 := 4'd1;
            set r1 := 4'd2
        )
    }